@@ -1,1 +1,1 @@
-DIST remmina-1.1.1.tar.gz 798802 SHA256 a3daf4a458d1f55682c05d405f0a20daa6a8d24ca098983a2f389f3e6d2f5c37 SHA512 52c539d8118c06440cb4e4b3ecf35e30ce6bb4786c827d1c69581028a3b7f50a114ffa5a4f5c0e81717ba0696e4f678f441bcb1a9ee7b5e0e85524152363694f WHIRLPOOL 5cb261ccd2d8ae8c1dc6fc38a1c9469aba3c05342fdec4bffb81f5c19959398b188235ba68e4a7ef1adeef034aa9cb73f449cc3c46a76e93067c4860a479a3ed
+DIST remmina-1.1.2.tar.gz 796691 SHA256 214eb82e616f3158304f689692d467b45c537e295e6aed1c6d291b2d7d2e601e SHA512 4f6a38ec99acdfe53343e7c72e773f71a505eaacca6c6b078a17496556df0827f15aa84af7a8903e8c12caad2fc9737d8414aa923605e06e30e4a7d2c67add48 WHIRLPOOL 3aa08e9f907e8067886ac92b52711d7f5bdbfbfbc4c6808d8c0cea02a119a706afa86b070188e0c7c5da48aacdead6b489ec5609166239fbb1f1d2f12fc64409
